--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -5,8 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Edit User</title>
-<link rel="stylesheet" th:href="@{/css/index.css}">
+
+<link rel="stylesheet" th:href="@{/css/style.css}">
 <link rel="stylesheet" th:href="@{/css/header.css}">
+<link rel="stylesheet" th:href="@{/css/index.css}">
 <!-- Latest compiled and minified CSS -->
  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -37,7 +39,7 @@
     </head>
 <body>
     <header th:insert="header.html :: nav"></header>
-<div id="form">
+    <div id="form">
     <form>
       
       <!-- ============   Name + DOB  ============= -->
