--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -1,60 +1,63 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Add User</title>
-<link rel="stylesheet" th:href="@{/css/index.css}">
-<link rel="stylesheet" th:href="@{/css/header.css}">
-<!-- Latest compiled and minified CSS -->
- <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Add User</title>
+  <link rel="stylesheet" th:href="@{/css/index.css}">
+  <link rel="stylesheet" th:href="@{/css/header.css}">
+  <!-- Latest compiled and minified CSS -->
+  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
 
-<style>
-      #form{
-        margin: 0.5% 7%; 
-        padding: 5%; 
-        background-color: #f2f2f2; 
-        font-family: 'Open Sans' , sans-serif;
-        font-weight: 600;
-        color: #000000;
-      }
+  <style>
+    #form {
+      margin: 0% 7%;
+      padding: 4%;
+      background-color: #f2f2f2;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: 600;
+      color: #000000;
+    }
 
-      form {
-        font-family: Poppins;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 190%;
-        letter-spacing: 0.06em;
-        text-transform: capitalize;
-        color: #000000;
-      }
-    </style>
+    form {
+      font-family: Poppins;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 20px;
 
-    </head>
+      letter-spacing: 0.06em;
+      text-transform: capitalize;
+      color: #000000;
+    }
+  </style>
+
+</head>
+
 <body>
-    <header th:insert="header.html :: nav"></header>
-<div id="form">
-    <form th:action="@{/admin/do_register}" method="POST" th:object="${user}">
-      
-      <!-- ============   Name + DOB  ============= -->
+  <header th:insert="header.html :: nav"></header>
+  <div class="container-fluid" style="margin-top: 6%;margin-bottom: 2%;">
+    <div id="form">
+      <form th:action="@{/admin/do_register}" method="POST" th:object="${user}">
 
-    <div class="form-row">
-      <div class="form-group col-md-6 ">
-          <label for="firstName">Full Name*</label>
-          <input type="text" class="form-control " id="inputTextl4" name="name" required>
-      </div>
+        <!-- ============   Name + DOB  ============= -->
 
-      <div class="form-group col-md-6">
-        <label for="DOB">Date Of Birth*</label>
-        <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required name="dob">
-      </div>
-    </div>
+        <div class="form-row">
+          <div class="form-group col-md-6 ">
+            <label for="firstName">Full Name*</label>
+            <input type="text" class="form-control " id="inputTextl4" name="name" required>
+          </div>
 
-        <!-- ============   Email + Password + Gender + UserID  ============= -->
+          <div class="form-group col-md-6">
+            <label for="DOB">Date Of Birth*</label>
+            <input type="date" class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required name="dob">
+          </div>
+        </div>
+
+        <!-- ============   Email + Password + Gender + Address  ============= -->
 
         <div class="form-row">
           <div class="form-group col-md-6">
@@ -77,128 +80,151 @@
             </select>
           </div>
 
-          <!--  <div class="form-group col-md-6">
-            <label for="UserID">UserID*</label>
-            <input type="text" class="form-control" id="inputTextl4" required>
-          </div> -->
-    
-        </div>
-
-        <!-- ============   UserType + Address ============= -->
-
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="UserType">UserType*</label>
-            <select name="role" class="form-control" required>
-              <option value="Type">Select Type</option>
-              <option value="Student">Student</option>
-              <option value="ADMIN">Admin</option>
-              <option value="MANAGEMENT">Management</option>
-            </select>
-          </div>
-
           <div class="form-group col-md-6">
             <label for="inputAddress">Address*</label>
-            <input type="text" class="form-control" name="address" id="inputAddress" placeholder="Address here ..." required>
-         </div>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." required>
+          </div>
+
         </div>
 
-         <!-- ============   Mobile + Adhar + Pan  ============= -->
+        <!-- ============   correspondence address + Mobile number ============= -->
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputAddress">correspondence address</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Address here ...">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="inputNum">Mobile number*</label>
+            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
+          </div>
+
+        </div>
+
+        <!-- Alternate-Mobile + Telephone number + Aadhar-Card Number + pan  + department + DOJ  -->
 
         <div class="form-row">
           <div class="form-group col-md-4">
-            <label for="inputNum">Mobile number*</label>
-            <input type="tel" class="form-control" name="mobileNumber" id="inputNum" required>
-        
+            <label for="inputNum">Alternate-Mobile number*</label>
+            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
           </div>
+
+          <div class="form-group col-md-4">
+            <label for="inputNum">Telephone number*</label>
+            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
+          </div>
+
           <div class="form-group col-md-4">
             <label for="inputAdhar">Aadhar-Card Number*</label>
-            <input type="text" class="form-control" name="aadharNumber" id="inputAdhar" required>
+            <input type="text" class="form-control" id="inputAdhar" placeholder="Aadhar Number" required>
           </div>
           <div class="form-group col-md-4">
             <label for="inputPan">Pan Number*</label>
-            <input type="text" class="form-control" name="panNumber" id="inputPan" required>
+            <input type="text" class="form-control" id="inputPan" placeholder="Pan Number" required>
           </div>
-        </div>
-
-          <!-- ============   DepartmentID + DOJ + Designation  ============= -->
-
-        <div class="form-row">
           <div class="form-group col-md-4">
-            <label>Department ID*</label>
-            <input type="text" class="form-control" name="deptId" id="inputNum" required>
-        
+            <label>Department Name*</label>
+            <input type="text" class="form-control" id="inputNum" placeholder="Department ID" required>
+
           </div>
           <div class="form-group col-md-4">
             <label for="inputAdhar">Date Of Joining*</label>
-            <input type="date" class="form-control" name="doj" id="DOJ" required>
-          </div>
-          
-          <!-- 
-          <div class="form-group col-md-4">
-            <label for="inputPan">Designation*</label>
-            <select name="designation" class="form-control" required>
-              <option value="Student">Student</option>
-              <option value="Staff">Staff</option>
-              <option value="HOD">H.O.D.</option>
-              <option value="Principal">Principal</option>
-            </select>
+            <input type="date" class="form-control" id="DOJ" required>
           </div>
         </div>
 
-       
-        
+        <!-- ============   Department + Roll Number + Semester  ============= -->
+
+        <div class="form-row">
+
+          <div class="form-group col-md-4">
+            <label for="inputPan">Designation*</label>
+            <select name="designation" class="form-control" required>
+              <option value="select">Select</option>
+              <option value="Student">Student</option>
+              <option value="Staff">Staff</option>
+            </select>
+          </div>
+
+          <div class="form-group col-md-4">
+            <label for="inputPan">Roll Number*</label>
+            <input type="text" class="form-control" id="inputRoll" placeholder="Roll Number" required>
+          </div>
+
+          <div class="form-group col-md-4">
+            <label for="inputSem">Semester*</label>
+            <select name="Semester" class="form-control" required>
+              <option value="select">Select</option>
+              <option value="Student">1<sup>st</sup> Sem</option>
+              <option value="Student">2<sup>nd</sup> Sem</option>
+              <option value="Student">3<sup>rd</sup> Sem</option>
+              <option value="Student">4<sup>th</sup> Sem</option>
+              <option value="Student">5<sup>th</sup> Sem</option>
+              <option value="Student">6<sup>th</sup> Sem</option>
+              <option value="Student">7<sup>th</sup> Sem</option>
+              <option value="Student">8<sup>th</sup> Sem</option>
+
+            </select>
+          </div>
+
+        </div>
+
+
+        <!-- ============   Nationality + Religion + Category + Caste + blood-group============= -->
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Nationality*</label>
-            <input type="text" class="form-control" required>
-           </div>
+            <input type="text" class="form-control" placeholder="Nationality" required>
+          </div>
 
           <div class="form-group col-md-6">
             <label for="">Religion*</label>
-            <input type="text" class="form-control" required>
-            </div>
+            <input type="text" class="form-control" placeholder="Religion" required>
+          </div>
 
-            <div class="form-group col-md-6">
-              <label for="inputCategory">Category*</label>
-           <select name="Category" class="form-control" required>
-            <option value="GENERAL">Select Category</option>
-            <option value="SC">SC</option>
-            <option value="ST">ST</option>
-            <option value="NT">NT</option>
-            <option value="OBC">OBC</option>
-            <option value="SBC">SBC</option>
-            <option value="OPEN">OPEN</option>
-          </select>
+          <div class="form-group col-md-6">
+            <label for="inputCategory">Category*</label>
+            <select name="Category" class="form-control" required>
+              <option value="GENERAL">Select Category</option>
+              <option value="SC">SC</option>
+              <option value="ST">ST</option>
+              <option value="NT">NT</option>
+              <option value="OBC">OBC</option>
+              <option value="SBC">SBC</option>
+              <option value="OPEN">OPEN</option>
+            </select>
           </div>
 
           <div class="form-group col-md-6">
             <label for="">Caste*</label>
-            <input type="text" class="form-control" required>
-            </div>
+            <input type="text" class="form-control" placeholder="Caste" required>
+          </div>
 
-            <div class="form-group col-md-4">
-              <label for="blood-group">blood-group*</label>
-           <select name="blood-group" class="form-control" required>
-            <option value="blood-group">blood-group</option>
-            <option>A Positive</option>
-            <option>A Negative</option>
-            <option>B Positive</option>
-            <option>B Negative</option>
-            <option>AB Positive</option>
-            <option>AB Negative</option>
-            <option>O Positive</option>
-            <option>O Negative</option>
-          </select>
-          </div>  -->
-      </div>
-        
-          <!-- ============   ADD BUTTON  ============= -->
+          <div class="form-group col-md-4">
+            <label for="blood-group">blood-group*</label>
+            <select name="blood-group" class="form-control" required>
+              <option value="blood-group">blood-group</option>
+              <option>A Positive</option>
+              <option>A Negative</option>
+              <option>B Positive</option>
+              <option>B Negative</option>
+              <option>AB Positive</option>
+              <option>AB Negative</option>
+              <option>O Positive</option>
+              <option>O Negative</option>
+            </select>
+          </div>
+        </div>
+
+        <!-- ============   ADD BUTTON  ============= -->
 
         <button type="submit" class="btn btn-outline-primary float-right">Add User</button>
 
       </form>
     </div>
-    <div id="footer" th:insert="footer.html :: footer"></div>
+  </div>
+  <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
+
 </html>
