--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -29,6 +29,19 @@
 
 <!-- style  -->
 <style>
+
+body{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    height: 100vh;
+    width: 100%;
+    overflow: auto;
+
+}
     .bd-placeholder-img {
       font-size: 1.125rem;
       text-anchor: middle;
