--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -8,6 +8,20 @@
    <link rel="stylesheet" th:href="@{https://use.fontawesome.com/releases/v5.0.8/css/all.css}">
   <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"/>
   <title th:text="${metaTitle} ? ${metaTitle} : 'default title'"></title>
+<style>
+body{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    height: 100vh;
+    width: 100%;
+    overflow: auto;
+
+}
+</style>
 </head>
 
 <body>
