--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -5,9 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Edit User</title>
-
-<link rel="stylesheet" th:href="@{/css/style.css}">
-<link rel="stylesheet" th:href="@{/css/header.css}">
 <link rel="stylesheet" th:href="@{/css/index.css}">
 <!-- Latest compiled and minified CSS -->
  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
@@ -39,165 +36,172 @@
     </head>
 <body>
     <header th:insert="header.html :: nav"></header>
-    <div id="form">
-    <form>
-      
-      <!-- ============   Name + DOB  ============= -->
+    
+    <main class="editUser-container">
 
-    <div class="form-row">
-      <div class="form-group col-md-6">
-          <label for="firstName">Full Name*</label>
-          <input type="text" class="form-control" id="inputTextl4" required>
-      </div>
-
-      <div class="form-group col-md-6">
-        <label for="DOB">Date Of Birth*</label>
-        <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required>
-      </div>
-    </div>
-
-        <!-- ============   Email + Password + Gender + UserID  ============= -->
-
+      <div id="form">
+        <form>
+          
+          <!-- ============   Name + DOB  ============= -->
+    
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputEmail4">Email*</label>
-            <input type="email" class="form-control" id="inputEmail4" required>
-          </div>
-
-          <div class="form-group col-md-6">
-            <label for="inputPassword4">Password*</label>
-            <input type="password" class="form-control" id="inputPassword4" required>
-          </div>
-
-          <div class="form-group col-md-6">
-            <label for="inputGender4">Gender*</label>
-            <select name="gener" class="form-control" required>
-              <option value="gener">...</option>
-              <option value="Male">Male</option>
-              <option value="Female">Female</option>
-              <option value="Other">Other</option>
-            </select>
-          </div>
-
-          <div class="form-group col-md-6">
-            <label for="UserID">UserID*</label>
-            <input type="text" class="form-control" id="inputTextl4" required>
+              <label for="firstName">Full Name*</label>
+              <input type="text" class="form-control" id="inputTextl4" required>
           </div>
     
-        </div>
-
-        <!-- ============   UserType + Address ============= -->
-
-        <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="UserType">UserType*</label>
-            <select name="designation" class="form-control" required>
-              <option value="Type">Select Type</option>
-              <option value="Student">Student</option>
-              <option value="Faculty">Faculty</option>
-            </select>
+            <label for="DOB">Date Of Birth*</label>
+            <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required>
           </div>
-
-          <div class="form-group col-md-6">
-            <label for="inputAddress">Address*</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." required>
-         </div>
         </div>
-
-         <!-- ============   Mobile + Adhar + Pan  ============= -->
-
-        <div class="form-row">
-          <div class="form-group col-md-4">
-            <label for="inputNum">Mobile number*</label>
-            <input type="tel" class="form-control" id="inputNum" required>
+    
+            <!-- ============   Email + Password + Gender + UserID  ============= -->
+    
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Email*</label>
+                <input type="email" class="form-control" id="inputEmail4" required>
+              </div>
+    
+              <div class="form-group col-md-6">
+                <label for="inputPassword4">Password*</label>
+                <input type="password" class="form-control" id="inputPassword4" required>
+              </div>
+    
+              <div class="form-group col-md-6">
+                <label for="inputGender4">Gender*</label>
+                <select name="gener" class="form-control" required>
+                  <option value="gener">...</option>
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
+                  <option value="Other">Other</option>
+                </select>
+              </div>
+    
+              <div class="form-group col-md-6">
+                <label for="UserID">UserID*</label>
+                <input type="text" class="form-control" id="inputTextl4" required>
+              </div>
         
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputAdhar">Aadhar-Card Number*</label>
-            <input type="text" class="form-control" id="inputAdhar" required>
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputPan">Pan Number*</label>
-            <input type="text" class="form-control" id="inputPan" required>
-          </div>
-        </div>
-
-          <!-- ============   DepartmentID + DOJ + Designation  ============= -->
-
-        <div class="form-row">
-          <div class="form-group col-md-4">
-            <label>Department ID*</label>
-            <input type="text" class="form-control" id="inputNum" required>
-        
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputAdhar">Date Of Joining*</label>
-            <input type="date" class="form-control" id="DOJ" required>
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputPan">Designation*</label>
-            <select name="designation" class="form-control" required>
-              <option value="Student">Student</option>
-              <option value="Staff">Staff</option>
-              <option value="HOD">H.O.D.</option>
-              <option value="Principal">Principal</option>
-            </select>
-          </div>
-        </div>
-
-       
-         <!-- ============   Nationality + Religion + blood-group  ============= -->
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label>Nationality*</label>
-            <input type="text" class="form-control" required>
-           </div>
-
-          <div class="form-group col-md-6">
-            <label for="">Religion*</label>
-            <input type="text" class="form-control" required>
             </div>
-
-            <div class="form-group col-md-6">
-              <label for="inputCategory">Category*</label>
-           <select name="Category" class="form-control" required>
-            <option value="GENERAL">Select Category</option>
-            <option value="SC">SC</option>
-            <option value="ST">ST</option>
-            <option value="NT">NT</option>
-            <option value="OBC">OBC</option>
-            <option value="SBC">SBC</option>
-            <option value="OPEN">OPEN</option>
-          </select>
-          </div>
-
-          <div class="form-group col-md-6">
-            <label for="">Caste*</label>
-            <input type="text" class="form-control" required>
+    
+            <!-- ============   UserType + Address ============= -->
+    
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="UserType">UserType*</label>
+                <select name="designation" class="form-control" required>
+                  <option value="Type">Select Type</option>
+                  <option value="Student">Student</option>
+                  <option value="Faculty">Faculty</option>
+                </select>
+              </div>
+    
+              <div class="form-group col-md-6">
+                <label for="inputAddress">Address*</label>
+                <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." required>
+             </div>
             </div>
-
-            <div class="form-group col-md-4">
-              <label for="blood-group">blood-group*</label>
-           <select name="blood-group" class="form-control" required>
-            <option value="blood-group">blood-group</option>
-            <option>A Positive</option>
-            <option>A Negative</option>
-            <option>B Positive</option>
-            <option>B Negative</option>
-            <option>AB Positive</option>
-            <option>AB Negative</option>
-            <option>O Positive</option>
-            <option>O Negative</option>
-          </select>
+    
+             <!-- ============   Mobile + Adhar + Pan  ============= -->
+    
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label for="inputNum">Mobile number*</label>
+                <input type="tel" class="form-control" id="inputNum" required>
+            
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputAdhar">Aadhar-Card Number*</label>
+                <input type="text" class="form-control" id="inputAdhar" required>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputPan">Pan Number*</label>
+                <input type="text" class="form-control" id="inputPan" required>
+              </div>
+            </div>
+    
+              <!-- ============   DepartmentID + DOJ + Designation  ============= -->
+    
+            <div class="form-row">
+              <div class="form-group col-md-4">
+                <label>Department ID*</label>
+                <input type="text" class="form-control" id="inputNum" required>
+            
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputAdhar">Date Of Joining*</label>
+                <input type="date" class="form-control" id="DOJ" required>
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputPan">Designation*</label>
+                <select name="designation" class="form-control" required>
+                  <option value="Student">Student</option>
+                  <option value="Staff">Staff</option>
+                  <option value="HOD">H.O.D.</option>
+                  <option value="Principal">Principal</option>
+                </select>
+              </div>
+            </div>
+    
+           
+             <!-- ============   Nationality + Religion + blood-group  ============= -->
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label>Nationality*</label>
+                <input type="text" class="form-control" required>
+               </div>
+    
+              <div class="form-group col-md-6">
+                <label for="">Religion*</label>
+                <input type="text" class="form-control" required>
+                </div>
+    
+                <div class="form-group col-md-6">
+                  <label for="inputCategory">Category*</label>
+               <select name="Category" class="form-control" required>
+                <option value="GENERAL">Select Category</option>
+                <option value="SC">SC</option>
+                <option value="ST">ST</option>
+                <option value="NT">NT</option>
+                <option value="OBC">OBC</option>
+                <option value="SBC">SBC</option>
+                <option value="OPEN">OPEN</option>
+              </select>
+              </div>
+    
+              <div class="form-group col-md-6">
+                <label for="">Caste*</label>
+                <input type="text" class="form-control" required>
+                </div>
+    
+                <div class="form-group col-md-4">
+                  <label for="blood-group">blood-group*</label>
+               <select name="blood-group" class="form-control" required>
+                <option value="blood-group">blood-group</option>
+                <option>A Positive</option>
+                <option>A Negative</option>
+                <option>B Positive</option>
+                <option>B Negative</option>
+                <option>AB Positive</option>
+                <option>AB Negative</option>
+                <option>O Positive</option>
+                <option>O Negative</option>
+              </select>
+              </div>
           </div>
-      </div>
-        
-          <!-- ============   ADD BUTTON  ============= -->
+            
+              <!-- ============   ADD BUTTON  ============= -->
+    
+            <button type="submit" class="btn btn-outline-primary float-right">Update</button>
+    
+          </form>
+        </div>
 
-        <button type="submit" class="btn btn-outline-primary float-right">Update</button>
+    </main>
 
-      </form>
-    </div>
+
     <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
