Add user page Updated

--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -225,7 +225,7 @@
         </form>
       </div>
   </div>
-    <div id="footer" th:insert="footer.html :: footer"></div>
+    <div id="scroll-footer" th:insert="footer.html :: footer"></div>
 
 </body>
 
