leave history page Updated

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -693,3 +693,7 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
   margin: 6% 0px;
 
 }
+
+.btn{
+  width: 110px !important;
+}
