Manage role Page Updated

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -697,3 +697,8 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
 .btn{
   width: 110px !important;
 }
+
+.center{
+  display: flex;
+  align-items: center;
+}
