--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/index.css}">
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/table.css}">
     <link rel="stylesheet" th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,14 +22,19 @@
     <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
 
     <style>
-        .boxContainer {
-            margin: auto;
-            position: relative;
-            width: 85%;
+        .search-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            width: 90%;
             height: 10%;
-            border: 4px solid #2980b9;
-            padding: 5px;
-            border-radius: 50px;
+            border: 2px solid #2980b9;
+            padding: 8px;
+            border-radius: 8px;
+
+            margin: auto;
         }
 
         .elementsContainer {
@@ -95,6 +101,13 @@
             text-transform: capitalize;
             color: #000000;
         }
+
+        .managerole-main{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50% , -55%);
+        }
     </style>
 </head>
 
@@ -103,97 +116,93 @@
     <header th:insert="header.html :: nav"></header>
 
 
-    <!---Search bar-->
-    <div class="boxContainer" style="margin-top: 7%;">
-        <table class="elementsContainer">
-            <tr>
-                <td>
-                    <input type="text" placeholder="Search Email/Username" class="search">
-                </td>
-                <td>
-                    <a href="#"><i class="material-icons">search</i></a>
-                </td>
-            </tr>
-        </table>
-    </div>
+    <main class="managerole-main">
 
-    <!--user information-->
-    <div class="container mt-5 font">
-        <div class="row">
-            <div class="col-md-12 userDetails font"><strong>Results: User Details</strong></div>
-        </div><br>
-        <div class="row">
-            <div class="col-md-12">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">UserID</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Mobile Number</th>
-                            <th scope="col">Role</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                <div class="row justify-content-start">
-                                    <div class="col-md-2">
-                                        <i class="fas fa-user-circle fa-2x"></i>
+        <!---Search bar-->
+        <div class=" search-container" >
+             
+                        <input type="text" placeholder="Search Email/Username" class="search">
+                        <a href="#"><i class="material-icons">search</i></a>
+        </div>
+    
+        <!--user information-->
+        <div class="container mt-5 font">
+            <div class="row">
+                <div class="col-md-12 userDetails font"><strong>Results: User Details</strong></div>
+            </div><br>
+            <div class="row">
+                <div class="col-md-12">
+                    <table class="table table-sm table-striped table-hover shadow">
+                        <thead>
+                            <tr>
+                                <th scope="col name">Name</th>
+                                <th scope="col user-id">UserID</th>
+                                <th scope="col mob-no">Mobile Number</th>
+                                <th scope="col department">Role</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td >
+                                    <div class="row name justify-content-start">
+                                        <div class="col-md-2 center" style="margin-left: 20px;">
+                                            <img id="user-image" th:src="@{/Assets/profile.svg}" alt="">
+                                        </div>
+                                        <div class="col center" >
+                                            <p style="margin: 0px;" >First Name Last Name<br><small>Staff</small></p>
+                                        </div>
                                     </div>
-                                    <div class="col-md-3">
-                                        <p>xyz<br><small>Staff</small></p>
-                                    </div>
+                                </td>
+                                <td>12345</td>
+                                <td>99999999999</td>
+                                <td>Faculty</td>
+
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+    
+                <!-- Role + Action -->
+                <!--Role-->
+                <div class="form">
+                    <div class="row justify-content-center">
+                        <div class="col-md-4">
+                            <div class="row">
+                                <div class="col-md-2">
+                                    <label for="Role" class="col-form-label">Role </label>
                                 </div>
-                            </td>
-                            <td>123</td>
-                            <td>xyz@gmail.com</td>
-                            <td>123456789</td>
-                            <td>xxx</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Role + Action -->
-            <!--Role-->
-            <div class="form">
-                <div class="row justify-content-center">
-                    <div class="col-md-4">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <label for="Role" class="col-form-label">Role </label>
+                                <div class="col-md-7">
+                                    <select id="Role" class="form-select">
+                                        <option value="Student">Student</option>
+                                        <option value="Faculty" selected>Faculty</option>
+                                        <option value="HOD">HOD</option>
+                                    </select>
+                                </div>
                             </div>
-                            <div class="col-md-7">
-                                <select id="Role" class="form-select">
-                                    <option value="Student">Student</option>
-                                    <option value="Faculty" selected>Faculty</option>
-                                    <option value="HOD">HOD</option>
-                                </select>
-                            </div>
+    
                         </div>
-
-                    </div>
-                    <div class="col-md-4">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <label for="Action" class="col-form-label">Action </label>
-                            </div>
-                            <div class="col-md-7">
-                                <select id="Action" class="form-select">
-                                    <option value="Assign" selected>Assign</option>
-                                    <option value="Revoke">Revoke</option>
-                                </select>
+                        <div class="col-md-4">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <label for="Action" class="col-form-label">Action </label>
+                                </div>
+                                <div class="col-md-7">
+                                    <select id="Action" class="form-select">
+                                        <option value="Assign" selected>Assign</option>
+                                        <option value="Revoke">Revoke</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--Submit Button-->
-
-    <button type="submit" class="btn btn-outline-primary" style="margin-left: 43%;">Submit</button>
+        <!--Submit Button-->
+    
+        <button type="submit" class="btn btn-outline-primary" style="margin-left: 43%;">Submit</button>
+    </main>
 
 
 
