Button issue Solved

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -694,7 +694,7 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
 
 }
 
-.btn{
+.status-btn{
   width: 110px !important;
 }
 
