--- a/src/main/resources/templates/admin/leavehistory.html
+++ b/src/main/resources/templates/admin/leavehistory.html
@@ -66,7 +66,7 @@
                     <td>CASUAL LEAVE</td>
                     <td>Going Home.</td>
                     <td>xxx</td>
-                    <td><button type="button" class="btn btn-sm btn-warning">Pending</button></td>
+                    <td><button type="button" class="btn status-btn btn-sm btn-warning">Pending</button></td>
                 </tr>
             
                     
@@ -76,7 +76,7 @@
                         <td>CASUAL LEAVE</td>
                         <td>sick..</td>
                         <td>xxx</td>
-                        <td><button type="button" class="btn btn-sm btn-success">Accepted</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-success">Accepted</button></td>
                     </tr>
 
                     <tr>
@@ -85,7 +85,7 @@
                         <td>CASUAL LEAVE</td>
                         <td>bdshbj.</td>
                         <td>xxx</td>
-                        <td><button type="button" class="btn btn-sm btn-danger">Reject</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Reject</button></td>
                     </tr>
                     </tbody>
             </table>
