--- a/src/main/resources/templates/common/profile.html
+++ b/src/main/resources/templates/common/profile.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" th:href="@{/css/header.css}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+	<link rel="stylesheet" th:href="@{/css/header.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
@@ -56,17 +58,18 @@
 </style>
 </head>
 <body>
-<div class="container rounded bg-white mt-5 mb-5">
+<header th:insert="header.html :: nav"></header>
+<div class="container rounded bg-white mt-5">
     <div class="row">
         
         <div class="col-md-3 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
         </div>
         <div class="col-md-9 border-right">
-            <div class="col-md-12"><h3>User Profile</h3></div>
+            <div class="col-md-12 mt-4" style="margin-bottom: -3%;"><h3>User Profile</h3></div>
             <div class="p-3 py-5">
                 
-                <div class="row mt-2">
+                <div class="row">
                     <div class="col-md-6"><label class="labels">Full Name</label><label  class="form-control">XYZ</label></div>
                     <div class="col-md-6"><label class="labels">Email-id</label><label class="form-control" >XYZ@gmail.com</label></div>              
                 
@@ -100,6 +103,6 @@
         
     </div>
 </div>
-
+<div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
