--- a/src/main/resources/templates/common/profile.html
+++ b/src/main/resources/templates/common/profile.html
@@ -103,6 +103,6 @@
         
     </div>
 </div>
-<div id="footer" th:insert="footer.html :: footer"></div>
+<div id="scroll-footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
