--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -91,7 +91,7 @@
             </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <table class="table table-sm table-striped table-hover shadow">
+                    <table class="table table-sm table-striped table-hover">
                         <thead>
                             <tr>
                                 <th scope="col name">Name</th>
@@ -131,7 +131,7 @@
                                 <div class="col-md-2">
                                     <label for="Role" class="col-form-label">Role </label>
                                 </div>
-                                <div class="col-md-7">
+                                <div class="col-md-8">
                                     <select id="Role" class="form-select">
                                         <option value="Student">Student</option>
                                         <option value="Faculty" selected>Faculty</option>
@@ -146,7 +146,7 @@
                                 <div class="col-md-3">
                                     <label for="Action" class="col-form-label">Action </label>
                                 </div>
-                                <div class="col-md-7">
+                                <div class="col-md-8">
                                     <select id="Action" class="form-select">
                                         <option value="Assign" selected>Assign</option>
                                         <option value="Revoke">Revoke</option>
