--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -86,7 +86,7 @@
 
 <body>
 	<header th:insert="header.html :: nav"></header>
-
+	<div>
 	<!---Search bar-->
     <div class="boxContainer" style="margin-top: 7%;">
         <table class="elementsContainer">
@@ -173,6 +173,7 @@
 
 			</table>
 		</div>
+	</div>
 	</div>
 	<div id="footer" th:insert="footer.html :: footer"></div>
 </body>
