edit user func.

--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -40,9 +40,7 @@
             padding-top: 10px;
         }
 
-        .col-8 {
-            border: 1px solid rgb(191, 193, 194);
-        }
+        
 
         .btn btn-primary {
             text-align: center;
@@ -78,20 +76,20 @@
     <main class="managerole-main">
 
         <!---Search bar-->
-        <div class=" search-container" >
+        <div class="search-container" >
              
                         <input type="text" placeholder="Search Email/Username" class="search">
                         <a href="#"><i class="material-icons">search</i></a>
         </div>
     
         <!--user information-->
-        <div class="container mt-5 font">
+        <div class="container-fluid mt-5 font">
             <div class="row">
                 <div class="col-md-12 userDetails font"><strong>Results: User Details</strong></div>
             </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <table class="table table-sm table-striped table-hover">
+                    <table class="table table-striped table-hover">
                         <thead>
                             <tr>
                                 <th scope="col name">Name</th>
