--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -43,14 +43,14 @@
     <main class="editUser-container">
 
       <div id="form">
-        <form>
+        <form th:action="@{/admin/update/{id} (id=${user.id})}" th:object = "${user}" method="POST">
           
           <!-- ============   Name + DOB  ============= -->
     
         <div class="form-row">
           <div class="form-group col-md-6">
               <label for="firstName">Full Name*</label>
-              <input type="text" class="form-control" id="inputTextl4" required>
+              <input type="text" class="form-control" id="inputTextl4" th:value="${user.name}" required>
           </div>
     
           <div class="form-group col-md-6">
