--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -753,3 +753,21 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
     background-color:blue;
     text-decoration: none;
 }
+/*  search css */
+
+.search-container{
+	position: relative;
+}
+.search-result{
+	position: absolute;
+	background:white;
+	width: 100%;
+	padding:10px;
+	border: 1px solid gray;
+	display: none;
+}
+
+.active{
+	background:#009688 !important;
+	color:white!important;
+}
