--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -97,24 +97,24 @@
 	<header th:insert="header.html :: nav"></header>
 
 	<main>
-
-		<div>
+		<div class="container">
+		<div class="mt-10">
+		
+		
 		<!---Search bar-->
-		 <div class="boxContainer"  style="margin-top: 7%;">
+		 
 			 <form th:action="@{/admin/view-users}" method="get">
-				<table class="elementsContainer">
-					<tr>
-						<td>
-							<input type="text" name="keyword" id="keyword" placeholder="Search Email/Username" class="search">
-						</td>
-						<td>
-							<button  type="submit"><i class="material-icons">search</i></button>
-						</td>
-					</tr>
-				</table>
+				<div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
+            <div class="input-group">
+              <input type="search" name="keyword" id="keyword" placeholder="Search Email/Username" aria-describedby="button-addon1" class="form-control border-0 bg-light">
+              <div class="input-group-append">
+                <button id="button-addon1" type="submit" class="btn btn-link text-primary"><i class="fa fa-search"></i></button>
+              </div>
+              </div>
+              </div>
 			</form>
 		</div> 
-		
+		</div>
 	
 		<div class="container mt-5">
 			<div>
