changes in leave history

--- a/src/main/resources/templates/admin/leavehistory.html
+++ b/src/main/resources/templates/admin/leavehistory.html
@@ -56,7 +56,10 @@
                     <th scope="col">Leave Type</th>
                     <th scope="col">Reason</th>
                     <th scope="col">Adjustment</th>
+                    <th scope="col">No. of Days</th>
                     <th scope="col">Status</th>
+                    <th scope="col">Cancel Leave</th>
+                    
                 </tr>
                 </thead>
                 <tbody>
@@ -66,7 +69,9 @@
                     <td>CASUAL LEAVE</td>
                     <td>Going Home.</td>
                     <td>xxx</td>
+                    <td>5</td>
                     <td><button type="button" class="btn status-btn btn-sm btn-warning">Pending</button></td>
+                    <td><button type="button" class="btn status-btn btn-sm btn-danger">Cancel</button></td>
                 </tr>
             
                     
@@ -76,7 +81,10 @@
                         <td>CASUAL LEAVE</td>
                         <td>sick..</td>
                         <td>xxx</td>
+                        <td>5</td>
                         <td><button type="button" class="btn status-btn btn-sm btn-success">Accepted</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Cancel</button></td>
+                    	
                     </tr>
 
                     <tr>
@@ -85,8 +93,11 @@
                         <td>CASUAL LEAVE</td>
                         <td>bdshbj.</td>
                         <td>xxx</td>
+                        <td>5</td>
                         <td><button type="button" class="btn status-btn btn-sm btn-danger">Reject</button></td>
+                        <td><button type="button" class="btn status-btn btn-sm btn-danger">Cancel</button></td>
                     </tr>
+                    
                     </tbody>
             </table>
         </div>
