--- a/src/main/resources/templates/common/profile.html
+++ b/src/main/resources/templates/common/profile.html
@@ -63,7 +63,18 @@
     <div class="row">
         
         <div class="col-md-3 border-right">
-            <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+            <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+            <span class="font-weight-bold">Edogaru</span>
+            <span class="text-black-50">edogaru@mail.com.my</span><span>
+             </span></div>
+             <div class="mb-3">
+              <form method="post" th:action="@{/profileUpload}" enctype="multipart/form-data">
+				  <label for="formFileSm" class="form-label">Change Profile Picture</label>
+				  <input class="form-control form-control-sm" id="formFileSm" type="file" name="file">
+				  <button type="submit" class="btn btn-primary mt-2" >Upload File</button>
+			  </form>
+			</div>
         </div>
         <div class="col-md-9 border-right">
             <div class="col-md-12 mt-4" style="margin-bottom: -3%;"><h3>User Profile</h3></div>
@@ -99,7 +110,7 @@
                     <div class="col-md-6"><label class="labels">Caste</label><label class="form-control">xxx</label></div>
                     <div class="col-md-12"><label class="labels">Blood Group</label><label class="form-control">B+</label></div>
                 </div>
-                
+            
             </div>
         </div>
         
