--- a/src/main/resources/templates/common/profile.html
+++ b/src/main/resources/templates/common/profile.html
@@ -61,10 +61,9 @@
 <header th:insert="header.html :: nav"></header>
 <div class="container rounded bg-white mt-5">
     <div class="row">
-        
         <div class="col-md-3 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-            <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+            <img class="rounded-circle mt-5" width="150px" th:src="@{user.imageUrl}">
             <span class="font-weight-bold">Edogaru</span>
             <span class="text-black-50">edogaru@mail.com.my</span><span>
              </span></div>
@@ -92,7 +91,7 @@
                 
                     <div class="col-md-4"><label class="labels">UserID</label><label class="form-control">100</label></div>
                     <div class="col-md-4"><label class="labels">UserType</label><label class="form-control">Student</label></div>
-                
+              
                     <div class="col-md-12"><label class="labels">Address</label><label class="form-control">abc colony</label></div>
                     <div class="col-md-4"><label class="labels">City</label><label class="form-control">Wardha</label></div>
                     <div class="col-md-4"><label class="labels">State</label><label class="form-control">Maharashtra</label></div>
