--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -50,12 +50,12 @@
         <div class="form-row">
           <div class="form-group col-md-6">
               <label for="firstName">Full Name*</label>
-              <input type="text" class="form-control" id="inputTextl4" th:value="${user.name}" required>
+              <input type="text" class="form-control" id="inputTextl4" name="name" th:value="${user.name}" required>
           </div>
     
           <div class="form-group col-md-6">
             <label for="DOB">Date Of Birth*</label>
-            <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" th:value="${user.dob}" required>
+            <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" name="dob" th:value="${user.dob}" required>
           </div>
         </div>
     
@@ -64,24 +64,18 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">Email*</label>
-                <input type="email" class="form-control" id="inputEmail4" th:value="${user.email}" required>
+                <input type="email" class="form-control" id="inputEmail4" name="email" th:value="${user.email}" required>
               </div>
     
               <div class="form-group col-md-6">
                 <label for="inputGender4">Gender*</label>
-                <select name="gener" class="form-control" th:value="${user.gender}" required>
+                <select name="gender" class="form-control" th:value="${user.gender}" required>
                   <option value="gener">...</option>
-                  <option value="Male">Male</option>
-                  <option value="Female">Female</option>
-                  <option value="Other">Other</option>
+                  <option value="M">Male</option>
+                  <option value="F">Female</option>
+                  <option value="O">Other</option>
                 </select>
               </div>
-    
-              <div class="form-group col-md-6">
-                <label for="UserID">UserID*</label>
-                <input type="text" class="form-control" id="inputTextl4" th:value="${user.id}" required>
-              </div>
-        
             </div>
     
             <!-- ============   UserType + Address ============= -->
@@ -89,7 +83,7 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="UserType">User Type*</label>
-                <select name="designation" class="form-control" th:value="${user.role}" required>
+                <select name="role" class="form-control" th:value="${user.role}" required>
                   <option value="Type">Select Type</option>
                   <option value="ADMIN">Admin</option>
               	  <option value="STAFF">Staff</option>
@@ -98,7 +92,7 @@
     
               <div class="form-group col-md-6">
                 <label for="inputAddress">Address*</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." th:value="${user.address}" required>
+                <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." name="address" th:value="${user.address}" required>
              </div>
             </div>
     
@@ -107,38 +101,38 @@
             <div class="form-row">
               <div class="form-group col-md-4">
                 <label for="inputNum">Mobile number*</label>
-                <input type="tel" class="form-control" id="inputNum" th:value="${user.mobileNumber}" required>
+                <input type="tel" class="form-control" id="inputNum" name="mobileNumber" th:value="${user.mobileNumber}" required>
             
               </div>
               <div class="form-group col-md-4">
                 <label for="inputAdhar">Aadhar-Card Number*</label>
-                <input type="text" class="form-control" id="inputAdhar" th:value="${user.aadharNumber}" required>
+                <input type="text" class="form-control" id="inputAdhar" name="aadharNumber" th:value="${user.aadharNumber}" required>
               </div>
               <div class="form-group col-md-4">
                 <label for="inputPan">Pan Number*</label>
-                <input type="text" class="form-control" id="inputPan" th:value="${user.panNumber}" required>
+                <input type="text" class="form-control" id="inputPan" name="panNumber" th:value="${user.panNumber}" required>
               </div>
             </div>
     
               <!-- ============   DepartmentID + DOJ + Designation  ============= -->
     
             <div class="form-row">
-              <div class="form-group col-md-4">
-              <label>Department Name*</label>
-            <select name="deptId" class="form-control" th:value="${user.deptId}" required>
-              <option th:value="">....</option>
-              <option value="1">Computer Engineering</option>
-              <option value="2">Civil Engineering</option>
-              <option value="3">Electrical Engineering</option>
-			  <option value="4">Mechanical Engineering</option>
-            </select>
+              <!--  <div class="form-group col-md-4">
+              	<label>Department Name*</label>
+	            <select name="deptId" class="form-control" th:value="${user.deptId}" required>
+	              <option th:value="">....</option>
+	              <option value="1">Computer Engineering</option>
+	              <option value="2">Civil Engineering</option>
+	              <option value="3">Electrical Engineering</option>
+				  <option value="4">Mechanical Engineering</option>
+	            </select>
             
-              </div>
+              </div>-->
               <div class="form-group col-md-4">
                 <label for="inputAdhar">Date Of Joining*</label>
-                <input type="date" class="form-control" id="DOJ" th:value="${user.doj}" required>
+                <input type="date" class="form-control" id="DOJ" name="doj" th:value="${user.doj}" required>
               </div>
-              <div class="form-group col-md-4">
+              <!--  <div class="form-group col-md-4">
                 <label for="inputPan">Designation*</label>
                 <select name="designation" class="form-control" id="" th:value="${user.email}" required>
                   <option value="Student">Student</option>
@@ -146,7 +140,7 @@
                   <option value="HOD">H.O.D.</option>
                   <option value="Principal">Principal</option>
                 </select>
-              </div>
+              </div>-->
             </div>
     
            
@@ -154,17 +148,17 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label>Nationality*</label>
-                <input type="text" class="form-control" th:value="${user.nationality}" required>
+                <input type="text" class="form-control" name="nationality" th:value="${user.nationality}" required>
                </div>
     
               <div class="form-group col-md-6">
                 <label for="">Religion*</label>
-                <input type="text" class="form-control" th:value="${user.religion}" required>
+                <input type="text" class="form-control" name="religion" th:value="${user.religion}" required>
                 </div>
     
                 <div class="form-group col-md-6">
                   <label for="inputCategory">Category*</label>
-               <select name="Category" class="form-control" th:value="${user.category}" required>
+               <select name="category" class="form-control" th:value="${user.category}" required>
                 <option value="GENERAL">Select Category</option>
                 <option value="SC">SC</option>
                 <option value="ST">ST</option>
@@ -177,12 +171,12 @@
     
               <div class="form-group col-md-6">
                 <label for="">Caste*</label>
-                <input type="text" class="form-control" th:value="${user.caste}" required>
+                <input type="text" class="form-control" name="caste" th:value="${user.caste}" required>
                 </div>
     
                 <div class="form-group col-md-4">
                   <label for="blood-group">blood-group*</label>
-               <select name="blood-group" class="form-control" th:value="${user.blooGroup}" required>
+               <select name="bloodGroup" class="form-control" th:value="${user.blooGroup}" required>
                 <option value="blood-group">blood-group</option>
                 <option>A Positive</option>
                 <option>A Negative</option>
