--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -76,10 +76,11 @@
     <main class="managerole-main">
 
         <!---Search bar-->
-        <div class="search-container" >
-             
-                        <input type="text" placeholder="Search Email/Username" class="search">
-                        <a href="#"><i class="material-icons">search</i></a>
+        <div class="search-container " >
+             <form th:method="@{/admin/managerole}" method="get">
+                        <input type="text" placeholder="Search Email/Username" name="keyword" class="search">
+                        <button id="button-addon1" type="submit" class="btn btn-link text-primary"><i class="fa fa-search"></i></button>
+             </form>
         </div>
     
         <!--user information-->
@@ -89,33 +90,39 @@
             </div><br>
             <div class="row">
                 <div class="col-md-12">
-                    <table class="table table-striped table-hover">
+                   <!--  --> <table class="table table-striped table-hover">
                         <thead>
                             <tr>
+                            	<th scope="col name">Id</th>
                                 <th scope="col name">Name</th>
-                                <th scope="col user-id">UserID</th>
-                                <th scope="col mob-no">Mobile Number</th>
+                                <th scope="col department">Dept. Id</th>
+                                <th scope="col department">Email</th>
                                 <th scope="col department">Role</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr th:each="user : ${allUsers}">
+                            <td th:text="${user.id}">12345</td>
                                 <td >
                                     <div class="row name justify-content-start">
                                         <div class="col-md-2 center" style="margin-left: 20px;">
                                             <img id="user-image" th:src="@{/Assets/profile.svg}" alt="">
                                         </div>
                                         <div class="col center" >
-                                            <p style="margin: 0px;" >First Name Last Name<br><small>Staff</small></p>
+                                            <p style="margin: 0px;" th:text="${user.name}">First Name Last Name<br></p>
                                         </div>
                                     </div>
                                 </td>
-                                <td>12345</td>
-                                <td>99999999999</td>
-                                <td>Faculty</td>
-
+                                
+                                <td th:text="${user.deptId}">99999999999</td>
+                                <td th:text="${user.email}">Faculty</td>
+                                <td th:text="${user.role}">Faculty</td>
+                                 
+                                
+                                
+                                
+                                
                             </tr>
-
                         </tbody>
                     </table>
                 </div>
