--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -18,7 +18,7 @@
     <link th:href="@{https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap}" rel="stylesheet">
     <link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
     <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
-	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<style>
 
 
@@ -139,7 +139,7 @@
 							<th scope="col">Role</th>
 							<th scope="col">Department ID</th>
 							<th scope="col">Mobile Number</th>
-							<th scope="col">address</th>
+							
 						</tr>
 					</thead>
 	
@@ -153,17 +153,9 @@
 							<td th:text="${user.role}">Role</td>
 							<td th:text="${user.deptId}">Department ID</td>
 							<td th:text="${user.mobileNumber}">Mobile Number</td>
-							<td th:text="${user.address}">Address</td>
-							<td>
-								<button type="button" class="btn btn-sm btn-outline-success"><a th:href = "@{/admin/edituser/{id}(id=${user.id})}"><i
-											class="fas fa-pencil-alt"></i></a></button>
-								<button type="button" class="btn btn-sm btn-outline-danger"><i
-										class="fas fa-trash-alt"></i></button>
-							</td>
 							<td>
 								<div class="btn-group " role="group" aria-label="Basic mixed styles example">
-								  <button type="button" class="btn btn-success fas fa-pencil-alt"></button>
-								  <button type="button" class="btn btn-warning bi bi-list">
+								  <a type="button" th:href="@{/admin/edituser/{id}(id=${user.id})}" class="btn btn-success fas fa-pencil-alt"></a>
 									  <div class="dropdown">
 									  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
 										Dropdown button
