--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" th:href="@{/css/header.css}">
 	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		<script type="text/javascript" th:src="@{cripts/bootstrap.min.js}"></script>
 	<link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css}">
 
 	<!-- Google fonts -->
@@ -129,7 +131,7 @@
 				</div>
 			</div>-->
 
-					<div class="table-responsive mt-4">
+					<div class=" table table-responsive mt-4">
 						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
@@ -164,21 +166,18 @@
 									</td> -->
 									<td>
 										<div class="btn-group " role="group" aria-label="Basic mixed styles example">
-											<button type="button" class="btn btn-success fas fa-pencil-alt"></button>
-											<!-- <button type="button" class="btn btn-warning bi bi-list"> -->
-												<div class="dropdown">
-													<button class="btn btn-secondary dropdown-toggle" type="button"
-														id="dropdownMenuButton1" data-bs-toggle="dropdown"
-														aria-expanded="false">
-
-													</button>
-													<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-														<li><a class="dropdown-item" href="#">Action</a></li>
-														<li><a class="dropdown-item" href="#">Another action</a></li>
-														<li><a class="dropdown-item" href="#">Something else here</a>
-														</li>
-													</ul>
-												</div>
+											<button type="button" class=" edit-btn btn btn-success fas fa-pencil-alt"></button>
+											<div class="dropdown">
+												<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+												  Dropdown button
+												</button>
+												<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+												  <li><a class="dropdown-item" href="#">Action</a></li>
+												  <li><a class="dropdown-item" href="#">Another action</a></li>
+												  <li><a class="dropdown-item" href="#">Something else here</a></li>
+												</ul>
+											  </div>
+										</div>
 											</button>
 										</div>
 									</td>
@@ -193,7 +192,7 @@
 
 	<div id="scroll-footer" th:insert="footer.html :: footer"></div>
 
-	<script th:src="@{/js/script.js}"></script>
+
 </body>
 
 </html>
