--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -1,86 +1,78 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" >
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Student Management System</title>
-
+	
 	<!-- CSS only -->
 	<link rel="stylesheet" th:href="@{/css/index.css}">
 	<link rel="stylesheet" th:href="@{/css/header.css}">
 	<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-		<script type="text/javascript" th:src="@{cripts/bootstrap.min.js}"></script>
 	<link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css}">
-
+	
 	<!-- Google fonts -->
-<<<<<<< HEAD
-	<link th:href="@{https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap}" rel="stylesheet">
-	<link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
-	<link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
-
-=======
     <link th:href="@{https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap}" rel="stylesheet">
     <link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
     <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
->>>>>>> fdd6efeea1cb9697bf2a5b1a06ceb41c764ba77b
 	<style>
-		main {
 
-			height: calc(100vh - 60px - 82px - 40px);
-			/*  Adjustment for main height ( 60px - header , 82px - footer , 40px - adjustment) */
+
+		main{
+
+			height: calc(100vh - 60px - 82px  - 40px); /*  Adjustment for main height ( 60px - header , 82px - footer , 40px - adjustment) */
 
 		}
 
 
 		.boxContainer {
-			margin: auto;
-			position: relative;
-			width: 85%;
-			height: 10%;
-			border: 4px solid #2980b9;
-			padding: 5px;
-			border-radius: 50px;
-		}
+            margin: auto;
+            position: relative;
+            width: 85%;
+            height: 10%;
+            border: 4px solid #2980b9;
+            padding: 5px;
+            border-radius: 50px;
+        }
 
-		.elementsContainer {
-			width: 100%;
-			height: 100%;
-			vertical-align: middle;
-		}
+        .elementsContainer {
+            width: 100%;
+            height: 100%;
+            vertical-align: middle;
+        }
 
-		.search {
-			border: none;
-			height: 100%;
-			width: 100%;
-			padding: 0px 5px;
-			border-radius: 50px;
-			font-size: 18px;
-			font-family: "Nunito";
-			color: #424242;
-			font-weight: 500;
-		}
+        .search {
+            border: none;
+            height: 100%;
+            width: 100%;
+            padding: 0px 5px;
+            border-radius: 50px;
+            font-size: 18px;
+            font-family: "Nunito";
+            color: #424242;
+            font-weight: 500;
+        }
 
-		.search:focus {
-			outline: none;
-		}
+        .search:focus {
+            outline: none;
+        }
 
-		.material-icons {
-			font-size: 26;
-			color: #2980b9;
-			vertical-align: middle;
-			float: right;
-			padding-right: 10%;
-		}
+        .material-icons {
+            font-size: 26;
+            color: #2980b9;
+            vertical-align: middle;
+            float: right;
+            padding-right: 10%;
+        }
 
 		table {
-			border-collapse: collapse;
-			width: 100%;
-		}
+            border-collapse: collapse;
+            width: 100%;
+        }
 
 		button>a {
 			text-decoration: none;
@@ -106,27 +98,25 @@
 
 	<main style="margin-top: 7%;">
 		<div class="container">
-			<div class="mt-10">
-				<div class="container mt-5">
-					<div>
-						<form th:action="@{/admin/view-users}" method="get">
-							<div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
-								<div class="input-group">
-									<input type="search" name="keyword" id="keyword" placeholder="Search Email/Username"
-										aria-describedby="button-addon1" class="form-control border-0 bg-light">
-									<div class="input-group-append">
-										<button id="button-addon1" type="submit" class="btn btn-link text-primary"><i
-												class="fa fa-search"></i></button>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
-					<div>
-						<a th:href="@{adduser}" class="btn btn-sm btn-primary">Add Student</a>
-					</div>
-
-					<!--<div class="alert strip container" role="alert">
+		<div class="mt-10">
+		<div class="container mt-5">
+		<div>
+			<form th:action="@{/admin/view-users}" method="get">
+				<div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
+		           <div class="input-group">
+		             <input type="search" name="keyword" id="keyword" placeholder="Search Email/Username" aria-describedby="button-addon1" class="form-control border-0 bg-light">
+		             <div class="input-group-append">
+		               <button id="button-addon1" type="submit" class="btn btn-link text-primary"><i class="fa fa-search"></i></button>
+		             </div>
+		         </div>
+              </div>
+			</form>
+		</div> 
+			<div>
+				<a th:href="@{adduser}" class="btn btn-sm btn-primary">Add Student</a>
+			</div>
+	
+			<!--<div class="alert strip container" role="alert">
 				<div class="row">
 					<div class="col-md-6">
 						<form class="d-flex">
@@ -137,65 +127,6 @@
 					</div>
 				</div>
 			</div>-->
-<<<<<<< HEAD
-
-					<div class=" table table-responsive mt-4">
-						<table class="table table-striped table-hover">
-							<thead>
-								<tr>
-									<th scope="col">UserID</th>
-									<th scope="col">Name</th>
-									<th scope="col">Email</th>
-									<th scope="col">Gender</th>
-									<th scope="col">Role</th>
-									<th scope="col">Department ID</th>
-									<th scope="col">Mobile Number</th>
-									<th scope="col">address</th>
-								</tr>
-							</thead>
-
-							<tbody>
-
-								<tr th:each="user : ${allUsers}">
-									<td th:text="${user.id}">Student ID</td>
-									<td th:text="${user.name}">Student Name</td>
-									<td th:text="${user.email}">Student Email</td>
-									<td th:text="${user.gender}">Gender</td>
-									<td th:text="${user.role}">Role</td>
-									<td th:text="${user.deptId}">Department ID</td>
-									<td th:text="${user.mobileNumber}">Mobile Number</td>
-									<td th:text="${user.address}">Address</td>
-									<!-- <td>
-										<button type="button" class="btn btn-sm btn-outline-success"><a
-												th:href="@{/admin/edituser/{id}(id=${user.id})}"><i
-													class="fas fa-pencil-alt"></i></a></button>
-										<button type="button" class="btn btn-sm btn-outline-danger"><i
-												class="fas fa-trash-alt"></i></button>
-									</td> -->
-									<td>
-										<div class="btn-group " role="group" aria-label="Basic mixed styles example">
-											<button type="button" class=" edit-btn btn btn-success fas fa-pencil-alt"></button>
-											<div class="dropdown">
-												<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-												  Dropdown button
-												</button>
-												<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-												  <li><a class="dropdown-item" href="#">Action</a></li>
-												  <li><a class="dropdown-item" href="#">Another action</a></li>
-												  <li><a class="dropdown-item" href="#">Something else here</a></li>
-												</ul>
-											  </div>
-										</div>
-											</button>
-										</div>
-									</td>
-								</tr>
-							</tbody>
-
-						</table>
-					</div>
-				</div>
-=======
 	
 			<div class="table-responsive mt-4">
 				<table class="table table-striped table-hover">
@@ -224,14 +155,17 @@
 							<td th:text="${user.mobileNumber}">Mobile Number</td>
 							<td>
 								<div class="btn-group " role="group" aria-label="Basic mixed styles example">
-								  <a type="button" th:href="@{/admin/edituser/{id}(id=${user.id})}" class="btn btn-success fas fa-pencil-alt"></a>
+
+										<a type="button" th:href="@{/admin/edituser/{id}(id=${user.id})}" >
+											<button class="edit-btn btn btn-success fas fa-pencil-alt"></button>
+										</a>
+								  
 									  <div class="dropdown">
-									  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-										Dropdown button
+									  <button class="btn btn-outline-secondary dropdown-toggle fas fa-caret-down" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
 									  </button>
 									  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item" href="#">Action</a></li>
-										<li><a class="dropdown-item" href="#">Another action</a></li>
+										<li><a class="dropdown-item" href="#">View Profile</a></li>
+										<li><a class="dropdown-item" href="#">Delete User</a></li>
 										<li><a class="dropdown-item" href="#">Something else here</a></li>
 									  </ul>
 									</div>
@@ -242,13 +176,14 @@
 					</tbody>
 	
 				</table>
->>>>>>> fdd6efeea1cb9697bf2a5b1a06ceb41c764ba77b
 			</div>
+		</div>
+		</div>
 	</main>
-
+	
 	<div id="scroll-footer" th:insert="footer.html :: footer"></div>
 
-
+	<script th:src="@{/js/script.js}"></script>
 </body>
 
 </html>
